--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
     <!-- header -->
-    <header class="mx-auto px-20 container">
+    <header class="mx-auto px-32 container">
+        <!-- navbar -->
         <nav class="mt-10 font-raleway">
             <div class="bg-base-100 navbar">
                 <div class="navbar-start">
@@ -49,13 +50,64 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <a class="gap-2 border-[#1DD100] bg-[#1DD1001A] hover:bg-[#1DD100] font-bold text-[#1DD100] text-xl hover:text-white btn">
+                    <a
+                        class="gap-2 border-[#1DD100] bg-[#1DD1001A] hover:bg-[#1DD100] font-bold text-[#1DD100] text-xl hover:text-white btn">
                         <i class="fa-solid fa-van-shuttle"></i>
                         Button
                     </a>
                 </div>
             </div>
         </nav>
+        <!-- banner section -->
+        <section class="relative mt-8 py-4">
+            <div
+                class="flex flex-col justify-center items-center space-y-5 bg-[url(images/banner.png)] bg-cover bg-no-repeat min-h-[601px] text-center">
+                <h1 class="font-extrabold font-raleway text-6xl text-white">End-to-End Travel with <br>
+                    <span class="text-[#1DD100]">P Paribahan</span>
+                </h1>
+                <p class="max-w-[620px] font-inter font-normal text-[#FFFFFF] text-lg">
+                    Yes, you can run unit tests and view the results directly within the app. The integrated testing
+                    features allow for a streamlined .
+                </p>
+                <button class="bg-[#1DD100] mt-4 border-none font-bold font-ralway text-[#030712] text-xl btn">Buy
+                    Tickets</button>
+            </div>
+            <div class="bottom-[-50px] absolute flex flex-row justify-center gap-6 w-full">
+                <div class="bg-base-100 shadow-xl border border-b-[#1DD100] rounded-3xl w-[300px] card">
+                    <div class="flex flex-row items-center gap-4 p-8 card-body">
+                        <div>
+                            <img src="images/people.png" alt="" class="w-16 h-16">
+                        </div>
+                        <div class="font-inter">
+                            <h3 class="font-bold text-[#030712] text-4xl">500K+</h3>
+                            <p class="font-normal text-[#03071299] text-lg">Registered users</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-base-100 shadow-xl border border-b-[#1DD100] rounded-3xl w-[300px] card">
+                    <div class="flex flex-row items-center gap-4 p-8 card-body">
+                        <div>
+                            <img src="images/ticket-cupon.png" alt="" class="w-16 h-16">
+                        </div>
+                        <div class="font-inter">
+                            <h3 class="font-bold text-[#030712] text-4xl">500K+</h3>
+                            <p class="font-normal text-[#03071299] text-lg">Registered users</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-base-100 shadow-xl border border-b-[#1DD100] rounded-3xl w-[300px] card">
+                    <div class="flex flex-row items-center gap-4 p-8 card-body">
+                        <div>
+                            <img src="images/stoppage.png" alt="stoppage" class="w-16 h-16">
+                        </div>
+                        <div class="font-inter">
+                            <h3 class="font-bold text-[#030712] text-4xl">500K+</h3>
+                            <p class="font-normal text-[#03071299] text-lg">Registered users</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
 
     <!-- main -->
