Best offers section design finished

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body class="py-40">
     <!-- header -->
     <header class="mx-auto px-32 container">
         <!-- navbar -->
@@ -53,7 +53,7 @@
                     <a
                         class="gap-2 border-[#1DD100] bg-[#1DD1001A] hover:bg-[#1DD100] font-bold text-[#1DD100] text-xl hover:text-white btn">
                         <i class="fa-solid fa-van-shuttle"></i>
-                        Button
+                        Bus
                     </a>
                 </div>
             </div>
@@ -111,8 +111,44 @@
     </header>
 
     <!-- main -->
-    <main>
-
+    <main class="mx-auto px-32 container">
+        <!-- Best offers for you -->
+        <section class="mt-32">
+            <h3 class="font-bold font-releway text-[#030712] text-[40px] text-center">Best offers for you</h3>
+            <div class="flex justify-around gap-10 mt-12 w-full">
+                <div
+                    class="flex flex-1 justify-evenly bg-[url(images/Rectangle-yellow.png)] bg-contain bg-no-repeat min-h-[238px]">
+                    <div class="flex flex-col justify-center font-inter">
+                        <h1 class="font-black text-[#030712CC] text-[40px]">15% OFF</h1>
+                        <p class="font-semibold text-[#030712CC] text-xl">on your next purchase</p>
+                        <p class="font-medium text-[#03071280] text-lg">use by January 2024</p>
+                    </div>
+                    <img src="images/cupon-devider.png" alt="" class="min-h-full">
+                    <div class="flex flex-col justify-center font-raleway">
+                        <h1 class="font-bold text-[#030712] text-[32px]">NEW15</h1>
+                        <p class="font-medium text-[#03071266] text-xl">Coupon Code</p>
+                    </div>
+                </div>
+                <div
+                    class="flex flex-1 justify-evenly bg-[url(images/Rectangle-pink.png)] bg-contain bg-no-repeat min-h-[238px]">
+                    <div class="flex flex-col justify-center font-inter">
+                        <h1 class="font-black text-[#030712CC] text-[40px]">20% OFF</h1>
+                        <p class="font-semibold text-[#030712CC] text-xl">on your next purchase</p>
+                        <p class="font-medium text-[#03071280] text-lg">use by January 2024</p>
+                    </div>
+                    <img src="images/cupon-devider.png" alt="" class="min-h-full">
+                    <div class="flex flex-col justify-center font-raleway">
+                        <h1 class="font-bold text-[#030712] text-[32px]">Couple 20</h1>
+                        <p class="font-medium text-[#03071266] text-xl">Coupon Code</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center mt-14">
+                <a class="border-[#1DD100] bg-[#1DD1001A] hover:bg-[#1DD100] font-bold font-raleway text-[#1DD100] text-xl hover:text-white btn">
+                    See All Offers
+                </a>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
