--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="py-40">
+<body class="pb-40">
     <!-- header -->
     <header class="mx-auto px-32 container">
         <!-- navbar -->
@@ -73,7 +73,7 @@
                     Tickets</button>
             </div>
             <div class="bottom-[-50px] absolute flex flex-row justify-center gap-6 w-full">
-                <div class="bg-base-100 shadow-xl border border-b-[#1DD100] rounded-3xl w-[300px] card">
+                <div class="bg-base-100 shadow-xl border-b border-b-[#1DD100] rounded-3xl w-[300px] card">
                     <div class="flex flex-row items-center gap-4 p-8 card-body">
                         <div>
                             <img src="images/people.png" alt="" class="w-16 h-16">
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-base-100 shadow-xl border border-b-[#1DD100] rounded-3xl w-[300px] card">
+                <div class="bg-base-100 shadow-xl border-b border-b-[#1DD100] rounded-3xl w-[300px] card">
                     <div class="flex flex-row items-center gap-4 p-8 card-body">
                         <div>
                             <img src="images/ticket-cupon.png" alt="" class="w-16 h-16">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-base-100 shadow-xl border border-b-[#1DD100] rounded-3xl w-[300px] card">
+                <div class="bg-base-100 shadow-xl border-b border-b-[#1DD100] rounded-3xl w-[300px] card">
                     <div class="flex flex-row items-center gap-4 p-8 card-body">
                         <div>
                             <img src="images/stoppage.png" alt="stoppage" class="w-16 h-16">
@@ -111,9 +111,9 @@
     </header>
 
     <!-- main -->
-    <main class="mx-auto px-32 container">
+    <main class="">
         <!-- Best offers for you -->
-        <section class="mt-32">
+        <section class="mx-auto mt-32 px-32 container">
             <h3 class="font-bold font-releway text-[#030712] text-[40px] text-center">Best offers for you</h3>
             <div class="flex justify-around gap-10 mt-12 w-full">
                 <div
@@ -144,11 +144,13 @@
                 </div>
             </div>
             <div class="flex justify-center mt-14">
-                <a class="border-[#1DD100] bg-[#1DD1001A] hover:bg-[#1DD100] font-bold font-raleway text-[#1DD100] text-xl hover:text-white btn">
+                <a
+                    class="border-[#1DD100] bg-[#1DD1001A] hover:bg-[#1DD100] font-bold font-raleway text-[#1DD100] text-xl hover:text-white btn">
                     See All Offers
                 </a>
             </div>
         </section>
+
     </main>
 
     <!-- footer -->
