Paribahan details part finished

--- a/index.html
+++ b/index.html
@@ -150,7 +150,84 @@
                 </a>
             </div>
         </section>
+        <!-- Booking section -->
+        <section class="mt-32 border-t border-t-[#1DD100] rounded-l-[88px] rounded-r-[88px]">
+            <div class="mx-auto px-32 container">
+                <!-- P.H Paribahan  short details -->
+                <div class="flex flex-col justify-center items-center w-full">
+                    <div class="max-w-[635px] text-center">
+                        <h2 class="mt-28 font-bold font-raleway text-[40px]">P.H Paribahan</h2>
+                        <p class="font-inter font-normal text-[#03071299] text-lg">
+                            Yes, you can run unit tests and view the results directly within the app. The integrated
+                            testing features allow for a streamlined .
+                        </p>
+                    </div>
+                </div>
+                <!-- Greenline Paribahan details -->
+                <div class="mt-11">
+                    <div class="flex flex-row p-8">
+                        <div class="flex flex-col flex-1">
+                            <div class="flex flex-row justify-between">
+                                <div class="flex items-center gap-4">
+                                    <div>
+                                        <img src="images/bus-logo.png" alt="" class="w-16 h-12">
+                                    </div>
+                                    <div>
+                                        <h3 class="font-bold font-raleway text-[#030712] text-[32px]">
+                                            Greenline Paribahan
+                                        </h3>
+                                        <p class="font-inter font-normal text-[#03071299] text-lg">
+                                            Coach-009-WEB !AC_Business</p>
+                                    </div>
+                                </div>
+                                <div>
+                                    <button class="bg-[#1DD10026] font-inter font-medium text-[#1DD100] text-lg btn">
+                                        <img src="images/seat-green.png" alt="">
+                                        <span>40</span>
+                                        <span>Seats left</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="space-y-6 bg-[#F7F8F8] mt-6 p-8 rounded-3xl">
+                                <div class="flex justify-between font-raleway font-semibold text-lg">
+                                    <p class="text-[#03071299]">Route</p>
+                                    <p class="text-[#030712]">Dhaka-Sylhet</p>
 
+                                </div>
+                                <img src="images/Line 2.png" alt="" class="w-full">
+                                <div class="flex justify-between font-raleway font-semibold text-lg">
+                                    <p class="text-[#03071299]">Departure Time</p>
+                                    <p class="text-[#030712]">9:0PM</p>
+                                </div>
+                                <img src="images/Line 2.png" alt="" class="w-full">
+                                <div class="flex justify-around">
+                                    <button
+                                        class="bg-[#0307120D] font-inter font-medium text-[#030712CC] text-base btn">
+                                        <p>Boarding Point - Laxmipur</p>
+                                    </button>
+                                    <button
+                                        class="bg-[#0307120D] font-inter font-medium text-[#030712CC] text-base btn">
+                                        <p>Dropping Point - Bogura</p>
+                                    </button>
+                                    <button
+                                        class="bg-[#0307120D] font-inter font-medium text-[#030712CC] text-base btn">
+                                        <p>Est. Time - 11 Hour</p>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Divider image -->
+                        <img src="images/info-devider.png" alt="">
+                        <div class="flex flex-col justify-center items-center space-y-4 font-raleway">
+                            <img src="images/fare.png" alt="">
+                            <h4 class="font-bold text-[#030712] text-3xl">550 Taka</h4>
+                            <p class="font-semibold text-[#03071299] text-2xl">Per Seat</p>
+                        </div>
+                    </div>
+                    <!-- Select seat to book -->
+                    <div></div>
+                </div>
+        </section>
     </main>
 
     <!-- footer -->
