--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
             </div>
         </section>
         <!-- Booking section -->
-        <section class="mt-32 border-t border-t-[#1DD100] rounded-l-[88px] rounded-r-[88px]">
+        <section class="bg-[#F7F8F8] mt-32 py-28 border-t border-t-[#1DD100] rounded-tl-[88px] rounded-tr-[88px]">
             <div class="mx-auto px-32 container">
                 <!-- P.H Paribahan  short details -->
                 <div class="flex flex-col justify-center items-center w-full">
                     <div class="max-w-[635px] text-center">
-                        <h2 class="mt-28 font-bold font-raleway text-[40px]">P.H Paribahan</h2>
+                        <h2 class="font-bold font-raleway text-[40px]">P.H Paribahan</h2>
                         <p class="font-inter font-normal text-[#03071299] text-lg">
                             Yes, you can run unit tests and view the results directly within the app. The integrated
                             testing features allow for a streamlined .
@@ -165,8 +165,8 @@
                 </div>
                 <!-- Greenline Paribahan details -->
                 <div class="mt-11">
-                    <div class="flex flex-row p-8">
-                        <div class="flex flex-col flex-1">
+                    <div class="flex flex-row bg-[#FFFFFF]">
+                        <div class="flex flex-col flex-1 p-8">
                             <div class="flex flex-row justify-between">
                                 <div class="flex items-center gap-4">
                                     <div>
@@ -194,12 +194,12 @@
                                     <p class="text-[#030712]">Dhaka-Sylhet</p>
 
                                 </div>
-                                <img src="images/Line 2.png" alt="" class="w-full">
+                                <img src="images/Line-1.svg" alt="" class="w-full">
                                 <div class="flex justify-between font-raleway font-semibold text-lg">
                                     <p class="text-[#03071299]">Departure Time</p>
                                     <p class="text-[#030712]">9:0PM</p>
                                 </div>
-                                <img src="images/Line 2.png" alt="" class="w-full">
+                                <img src="images/Line-1.svg" alt="" class="w-full">
                                 <div class="flex justify-around">
                                     <button
                                         class="bg-[#0307120D] font-inter font-medium text-[#030712CC] text-base btn">
@@ -218,14 +218,214 @@
                         </div>
                         <!-- Divider image -->
                         <img src="images/info-devider.png" alt="">
-                        <div class="flex flex-col justify-center items-center space-y-4 font-raleway">
+                        <div class="flex flex-col justify-center items-center space-y-4 p-8 font-raleway">
                             <img src="images/fare.png" alt="">
                             <h4 class="font-bold text-[#030712] text-3xl">550 Taka</h4>
                             <p class="font-semibold text-[#03071299] text-2xl">Per Seat</p>
                         </div>
                     </div>
-                    <!-- Select seat to book -->
-                    <div></div>
+                    <!--Seat Plan part/ Select seat to book -->
+                    <div class="flex flex-row bg-[#FFFFFF] mt-20 p-8">
+                        <div class="flex-1">
+                            <h5 class="font-raleway font-semibold text-[#030712] text-2xl">Select Your Seat</h5>
+                            <div class="">
+                                <img src="images/Line-1.svg" alt="" class="mt-6">
+                                <div class="flex justify-between py-5 font-inter font-medium text-lg">
+                                    <div class="flex gap-2">
+                                        <img src="images/seat-gray.png" alt="">
+                                        <p class="text-[#03071280]">Available</p>
+                                    </div>
+                                    <div class="flex gap-2">
+                                        <img src="images/seat-green-filled.png" alt="">
+                                        <p class="text-[#03071280]">Selected</p>
+                                    </div>
+                                </div>
+                                <img src="images/Line-1.svg" alt="" class="mb-6">
+                            </div>
+                            <!-- Driving Steering wheel -->
+                            <div class="flex justify-end">
+                                <button class="bg-[#0307121A] px-8 btn"><img src="images/tabler-icon-steering-wheel.svg"
+                                        alt="">
+                                </button>
+                            </div>
+                            <!-- Seat plan -->
+                            <div class="flex gap-16 text-lg">
+                                <!-- left side seats -->
+                                <div class="flex-1 seat">
+                                    <div class="flex gap-6 mt-6">
+                                        <p>A</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">A1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">A2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>B</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">B1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">B2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>C</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">C1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">C2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>D</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">D1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">D2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>E</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">E1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">E2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>F</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">F1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">F2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>G</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">G1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">G2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>H</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">H1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">H2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>I</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">I1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">I2</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <p>A</p>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">J1</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">J2</button>
+                                    </div>
+                                </div>
+                                <!-- right side seats -->
+                                <div class="flex-1 seat">
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">A3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">A4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">B3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">B4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">C3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">C4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">D3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">D4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">E3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">E4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">F3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">F4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">G3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">G4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">H3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">H4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">I3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">I4</button>
+                                    </div>
+                                    <div class="flex gap-6 mt-6">
+                                        <button class="flex-1 bg-[#F7F8F8] btn">J3</button>
+                                        <button class="flex-1 bg-[#F7F8F8] btn">J4</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Vertical divider image -->
+                        <img src="images/Line-2.svg" alt="" class="px-8">
+                        <!-- Booking Details/ Calculation -->
+                        <div class="w-[435px]">
+                            <h5 class="font-raleway font-semibold text-[#030712] text-2xl">Booking Details</h5>
+                            <img src="images/Line-3.svg" alt="" class="mt-6">
+                            <div class="bg-[#F7F8F8] my-6 p-8 rounded-xl font-inter">
+                                <ul class="flex justify-between font-medium text-[#030712] text-base">
+                                    <li class="flex flex-1 items-center gap-2">
+                                        <p>Seat</p>
+                                        <p class="bg-[#1DD100] px-2 rounded-md text-white text-xs">0</p>
+                                    </li>
+                                    <li class="flex-1">class</li>
+                                    <li class="text-right flex-1">Price</li>
+                                </ul>
+                                <img src="images/Line-3.svg" alt="" class="py-4">
+                                <div class="space-y-4">
+                                    <ul class="flex justify-between font-normal text-[#03071299] text-base">
+                                        <li class="flex-1">C2</li>
+                                        <li class="flex-1">Economoy</li>
+                                        <li class="text-right flex-1">0</li>
+                                    </ul>
+                                    <ul class="flex justify-between font-normal text-[#03071299] text-base">
+                                        <li class="flex-1">C2</li>
+                                        <li class="flex-1">Economoy</li>
+                                        <li class="text-right flex-1">0</li>
+                                    </ul>
+                                </div>
+                                <img src="images/Line-4.svg" class="py-4" alt="">
+                                <div class="flex justify-between font-medium text-[#030712] text-base">
+                                    <p>Total Price</p>
+                                    <p>BDT <span>0</span></p>
+                                </div>
+                                <!-- Submit Coupon -->
+                                <div class="relative flex items-center my-4">
+                                    <input type="text" placeholder="Have any coupon?" class="p-5 rounded-xl w-full">
+                                    <button type=""
+                                        class="right-0 absolute bg-[#1DD100] ml-0 px-4 py-3 rounded-lg font-semibold text-base text-white">
+                                        Apply
+                                    </button>
+                                </div>
+                                <!-- Grand Total -->
+                                <div class="flex justify-between mt-4 font-medium text-[#030712] text-base">
+                                    <p>Grand Total</p>
+                                    <p>BDT <span>0</span></p>
+                                </div>
+                            </div>
+                            <!-- Passenger Info -->
+                            <div class="mt-6">
+                                <form class="space-y-6 font-inter font-normal text-[#030712] text-base">
+                                    <div>
+                                        <label for="fname">Passenger Name<span class="text-red-600">*</span></label><br>
+                                        <input type="text" id="fname" name="fname" placeholder="Enter your name"
+                                            class="border-[#0307121A] mt-4 p-5 border rounded-xl w-full"><br>
+                                    </div>
+
+                                    <div>
+                                        <label for="phone">Phone Number<span class="text-red-600">*</span></label> <br>
+                                        <input type="tel" id="phone" name="phone" placeholder="Enter your phone number"
+                                            class="border-[#0307121A] mt-4 p-5 border rounded-xl w-full"><br>
+                                    </div>
+
+                                    <div>
+                                        <label for="email">Email ID</label><br>
+                                        <input type="email" id="email" name="email" placeholder="Enter your email"
+                                            class="border-[#0307121A] mt-4 p-5 border rounded-xl w-full">
+                                    </div>
+                                    <button
+                                        class="bg-[#1DD100] rounded-l-xl w-full font-extrabold font-raleway text-white text-xl btn">Next</button>
+                                    <!-- Term and conditions -->
+                                    <div class="flex justify-around mt-6 font-normal text-[#03071299] text-base">
+                                        <a href="">Terms and Conditions</a>
+                                        <a href="">Cancellation Policy</a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </section>
     </main>
