Footer section finished for desktop screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="pb-40">
+<body>
     <!-- header -->
     <header class="mx-auto px-32 container">
         <!-- navbar -->
@@ -431,8 +431,33 @@
     </main>
 
     <!-- footer -->
-    <footer>
-
+    <footer class="bg-[#030712]">
+        <div class="mx-auto mt-32 px-32 py-28 container">
+            <div class="flex justify-between">
+                <div>
+                    <h1 class="font-extrabold font-raleway text-4xl text-white">P-Ticket</h1>
+                    <p class="mt-4 font-inter font-normal text-[#FFFFFFCC] text-lg">P-Ticket is a digital platform to
+                        make your daily commuting better.</p>
+                </div>
+                <div class="mb-12">
+                    <p class="mb-5 font-raleway font-semibold text-[#FFFFFF] text-xl">Download our app</p>
+                    <img src="images/GooglePlay.svg" alt="">
+                </div>
+            </div>
+            <img src="images/footer-line.svg" alt="">
+            <div class="flex flex-row justify-between mt-8">
+                <div>
+                    <p class="font-inter font-normal text-[#FFFFFFB2] text-base">
+                        @all rights reserved, P-Ticket services limited.2024
+                    </p>
+                </div>
+                <ul class="flex justify-between gap-8 font-inter font-normal text-base text-white">
+                    <li><a href="">Terms & condition</a></li>
+                    <li><a href="">Return & refund policy</a></li>
+                    <li><a href="">Privacy policy</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <script src="JS/index.js"></script>
