footer margin top updated

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
     <!-- footer -->
     <footer class="bg-[#030712]">
-        <div class="mx-auto mt-32 px-32 py-28 container">
+        <div class="mx-auto px-32 py-28 container">
             <div class="flex justify-between">
                 <div>
                     <h1 class="font-extrabold font-raleway text-4xl text-white">P-Ticket</h1>
