footer margin padding updated

--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
     <!-- footer -->
     <footer class="bg-[#030712]">
         <div class="mx-auto px-32 py-28 container">
-            <div class="flex justify-between">
-                <div>
+            <div class="flex justify-between items-center mb-11">
+                <div class="max-w-80">
                     <h1 class="font-extrabold font-raleway text-4xl text-white">P-Ticket</h1>
-                    <p class="mt-4 font-inter font-normal text-[#FFFFFFCC] text-lg">P-Ticket is a digital platform to
-                        make your daily commuting better.</p>
+                    <p class="mt-4 font-inter font-normal text-[#FFFFFFCC] text-lg">
+                        P-Ticket is a digital platform to make your daily commuting better.</p>
                 </div>
                 <div class="mb-12">
                     <p class="mb-5 font-raleway font-semibold text-[#FFFFFF] text-xl">Download our app</p>
