footer divider length

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                     <img src="images/GooglePlay.svg" alt="">
                 </div>
             </div>
-            <img src="images/footer-line.svg" alt="">
+            <img src="images/footer-line.svg" alt="" class="w-full">
             <div class="flex flex-row justify-between mt-8">
                 <div>
                     <p class="font-inter font-normal text-[#FFFFFFB2] text-base">
